--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^4.2.2",
+    "cypress": "^5.2.0",
     "dotenv-webpack": "^2.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
