--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^7.7.0",
+    "eslint-config-airbnb": "^18.2.0",
     "fibers": "^5.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
