--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,3 @@
 GEOCODE_KEY=
-GEOCODE_API=
-ZE_BASE_URL=
+GEOCODE_API=https://maps.googleapis.com/maps/api/geocode/json
+ZE_BASE_URL=https://api.code-challenge.ze.delivery/public/graphql
